# nonebot-plugin-error-show

./: .env.test  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  readme_template.md
.github/workflows/: pypi-publish.yml  pytest.yml  rename.yml
migrations/versions/: f93a91fba37c_init.py
src/nonebot_plugin_error_show/: __init__.py  __main__.py  config.py  db.py  handle.py  utils.py
src/nonebot_plugin_error_show/migrations/: f93a91fba37c_init_error_show_db.py
src/nonebot_plugin_error_show/templates/: error.html.jinja2  output.css
src/nonebot_plugin_template/: __init__.py  config.py
tests/: conftest.py  plugin_test.py
